# dm_perforce

./: README.md  pyproject.toml
.github/workflows/: build-wheel.yml
src/dm_perforce/: __init__.py  perforce.py
