[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dm-perforce"
version = "0.1.0"
description = "Shared Perforce wrapper utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "p4python; platform_system == 'Windows'",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
